--- a/main.html
+++ b/main.html
@@ -8,7 +8,34 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav role="navigation">
+    <ul role="list">
+      <li role="listitem"><a href="#about">About</a></li>
+      <li role="listitem"><a href="#projects">Projects</a></li>
+      <li role="listitem"><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Heading -->
+  <h1 role="heading">Welcome to My Portfolio</h1>
+
+  <!-- Image -->
+  <img src="profile.jpg" alt="Portrait of the portfolio owner" role="img">
+
+  <!-- Brief Description -->
+  <p id="about">
+    Hello! I'm a passionate web developer focused on creating inclusive and accessible websites using modern technologies.
+  </p>
+
+  <!-- Project List -->
+  <h2 role="heading">Projects</h2>
+  <ul role="list" id="projects">
+    <li role="listitem">Accessible Web Design</li>
+    <li role="listitem">React To-Do App</li>
+    <li role="listitem">Responsive Blog Template</li>
+  </ul>
     <script type="text/javascript" src="./script.js">
+		
 </script>
 
 </body>
